# zkp-implementation

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yaml
.github/workflows/: ci.yaml  rust-clippy.yml
fri/: Cargo.toml  fri.md
fri/examples/: example.rs
fri/src/: fri_layer.rs  hasher.rs  lib.rs  merkle_tree.rs  prover.rs  utils.rs  verifier.rs
fri/src/fiat_shamir/: mod.rs  transcript.rs
fri/src/fields/: goldilocks.rs
fri/src/hash/: mod.rs  poseidon.rs  poseidon_params.rs
fri/src/utils/: fields.rs
frost/: Cargo.toml
frost/src/core/: error.rs  mod.rs  trait.rs
hash/: Cargo.toml  README.md
hash/examples/: rc_bls12.rs
hash/src/: lib.rs  utils.rs
hash/src/reinforced_concrete/: mod.rs  reinforced_concrete.rs  reinforced_concrete_instances.rs  reinforced_concrete_params.rs
kzg/: Cargo.toml
kzg/examples/: example.rs
kzg/src/: commitment.rs  lib.rs  opening.rs  scheme.rs  srs.rs  types.rs  utils.rs
lookup/: Cargo.toml
lookup/src/: commitment.rs  errors.rs  lib.rs  lookup.rs  multiset.rs  poly.rs  row.rs  tests.rs  transcript.rs  types.rs
lookup/src/multiset/: mod.rs  multiset.rs
lookup/src/pcs/: additive_homomorphic.rs  base_pcs.rs  kzg10.rs  mod.rs
lookup/src/plookup/: errors.rs  lookup_element.rs  lookup_vector.rs  mod.rs  proof.rs  quotient_poly.rs  scheme.rs  transcript_label.rs  types.rs
lookup/src/template_table/: xor.rs
lookup/src/utils/: fold.rs  mod.rs
lookup/tests/: plookup.rs
nova/: Cargo.toml  nova.md
nova/examples/: examples.rs
nova/src/: circuit.rs  lib.rs  transcript.rs  utils.rs
nova/src/ivc/: ivc_prover.rs  ivc_verifier.rs  mod.rs
nova/src/nifs/: mod.rs  nifs.rs  nifs_prover.rs  nifs_verifier.rs
nova/src/r1cs/: mod.rs
plonk/: Cargo.toml  Plonk.md  main.rs  plonk.md
plonk/examples/: example.rs
plonk/kzg/: Cargo.toml
plonk/kzg/src/: lib.rs  srs.rs
plonk/src/: challenge.rs  circuit.rs  compiled_circuit.rs  constrain.rs  constraint.rs  errors.rs  gate.rs  lib.rs  parser.rs  polynomial.rs  prover.rs  slice_polynomial.rs  srs.rs  types.rs  variable.rs  verifier.rs
plonk/src/common_preprocessed_input/: cpi_circuit.rs  cpi_parser.rs  mod.rs
