[package]
name = "fri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "fri-example"
path = "examples/example.rs"

[dependencies]
ark-poly = "0.4.2"
ark-ff = "0.5.0"
sha2 = "0.11.0-pre.3"
rand = "0.8.5"
