[package]
name = "kzg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "kzg-example"
path = "examples/example.rs"


[dependencies]
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-ec = "0.4.2"
ark-bls12-381 = "0.4.0"
ark-serialize = "0.5.0"
rand = "0.8.5"
