[package]
name = "lookup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merlin = "3.0.0"
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-std = "0.4.0"
ark-bls12-381 = "0.4.0"
kzg = { path = "../kzg" }
ark-serialize = "0.4.2"
rand = "0.9.0-alpha.1"
ark-ec = "0.4.2"
