[package]
name = "plonk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "plonk-example"
path = "examples/example.rs"


[dependencies]
ark-ff = "0.3"
ark-poly = "0.3"
ark-ec = "0.3"
ark-bls12-381 = "0.3"
ark-serialize = "0.3"
rand = "0.8.5"
sha2 = "0.11.0-pre.3"

kzg = { path = "../kzg" }
