[package]
name = "plonk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "plonk-example"
path = "examples/example.rs"


[dependencies]
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-ec = "0.4.2"
ark-bls12-381 = "0.4.0"
ark-serialize = "0.4.2"
ark-std = { version = "0.4.0", default-features = false }
sha2 = "0.10"
kzg = { path = "../kzg" }
clap = { version = "4.5.4", features = ["derive"] }

[dependencies.digest]
version = "0.10"
default-features = false
